@@ -1,6 +1,6 @@
 Package: exams
 Version: 2.2-2
-Date: 2017-05-24
+Date: 2017-06-09
 Title: Automatic Generation of Exams in R
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Bettina", family = "Gruen", role = "aut", email = "Bettina.Gruen@jku.at"),
